--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body {
 
 #mainmain{
 	    border-radius:14px;
-		background-image: url("bg.png");
+		background-image: url("denim_fabric_diff_1k");
 		margin-top: 10px;
 		background-color:　#99cc00;
 		text-align: left;
